update azure connection 02

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Azure_DbConnection_02-cd47321d-c349-4d89-9b16-daf8637c4a99;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Azure_DbConnection_02-cd47321d-c349-4d89-9b16-daf8637c4a99;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:aure-dbconnection-01dbserver.database.windows.net,1433;Initial Catalog=Aure-DbConnection-01_db;User Id=brianley@aure-dbconnection-01dbserver;Password=Petufo$9"
   },
   "Logging": {
     "LogLevel": {
